--- a/index.html
+++ b/index.html
@@ -13,35 +13,36 @@
       background-color: #fff;
       color: #111;
       text-align: center;
-      padding: 40px 20px;
+      padding: 100px 20px 40px;
     }
     img.logo {
-      max-width: 220px;
+      max-width: 320px;
       margin-top: 40px;
     }
     h1 {
       display: none;
     }
     p {
-      max-width: 600px;
-      margin: 40px auto;
-      font-size: 1rem;
-      line-height: 1.6;
+      max-width: 700px;
+      margin: 50px auto;
+      font-size: 1.25rem;
+      line-height: 1.8;
     }
     a.button {
       display: inline-block;
       margin-top: 20px;
-      padding: 12px 24px;
+      padding: 14px 28px;
       background: black;
       color: white;
       text-decoration: none;
       font-weight: 500;
+      font-size: 1rem;
       border-radius: 6px;
     }
     footer {
       font-size: 0.9rem;
       color: #666;
-      margin-top: 80px;
+      margin-top: 100px;
     }
   </style>
 </head>
