--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       background-color: #fff;
       color: #111;
       text-align: center;
-      padding: 40px 20px 20px;
+      padding: 10px 20px 20px;
     }
     img.logo {
       max-width: 400px;
-      margin-top: 20px;
+      margin-top: 0;
     }
     h1 {
       display: none;
