--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     img.logo {
       max-width: 400px;
-      margin-top: 0;
+      margin-top: 60px;
     }
     h1 {
       display: none;
